[package]
name = "async-language-server"
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "async_language_server"
path = "src/lib.rs"

[features]
default = []
tracing = ["dep:tracing", "async-lsp/tracing"]
tree-sitter = ["dep:tree-sitter"]

[dependencies]
async-lsp = { version = "0.2.2", default-features = false, features = ["client-monitor", "omni-trait"] }
dashmap = "6.1"
futures = "0.3"
globset = "0.4"
ropey = "1.6"
thiserror = "2.0"
tokio = { version = "1.45", features = ["io-std", "io-util", "net"] }
tower = "0.5"

tracing = { version = "0.1", optional = true }
tree-sitter = { version = "0.25", optional = true }

[lints.clippy]
all = { level = "deny", priority = -3 }
cargo = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 }

cargo_common_metadata = { level = "allow", priority = 1 }
module_inception = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
